--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope3-steps/scope3-steps.component.html
@@ -16,10 +16,11 @@
       </div>
     </div>
 
+    <!-- {{stepData | json }} -->
 
     <!-- Step Header with 20px Gap -->
     <div class="step-header" (click)="handleClick()">
-      <span class="title">{{ stepData.title }}</span>
+      <span class="title">{{ stepData.description }}</span>
       <span class="dropdown-arrow">
         <ng-container *ngIf="isExpanded; else downArrow">
           <!-- Up Arrow -->
@@ -41,13 +42,13 @@
   <!-- Expandable Content -->
   <div *ngIf="isExpanded" class="step-content">
     <ng-container [ngSwitch]="stepData.type">
-      <!-- Flight Type Content -->
+      <!-- Flight Type Content
       <div *ngSwitchCase="'flight'">
         <div class="provider-info">
           <p><strong>Flight Information:</strong></p>
           <div class="svg-container">
             <div class="implement">
-              <!-- Difficulty Level -->
+              Difficulty Level
               <ng-container *ngIf="stepData.difficulty >= 1 && stepData.difficulty < 3">
                 <img src="../../assets/low_imp.svg" alt="Difficulty Level 1-3" />Easy Implementation
               </ng-container>
@@ -66,7 +67,7 @@
           </div>
 
 
-          <!-- Flight Information -->
+          Flight Information
           <div class="dropdown-content">
             <div *ngIf="stepData.type === 'flight'">
               <div *ngIf="stepData.stops > 0; else noFlights">
@@ -78,7 +79,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Commute Type Content -->
       <div *ngSwitchCase="'commute'">
@@ -151,13 +152,13 @@
           <!-- CRU Providers Information -->
           <div class="dropdown-content">
             <div *ngIf="stepData.type === 'recommendation'">
-              <div *ngIf="stepData?.recommendations?.length; else noProviders">
-                <ul *ngFor="let recommendation of stepData?.recommendations" class="provider-item">
-                  <li *ngFor="let provider of recommendation.providers">
-                    <strong>{{provider.company}}</strong>
+              <div *ngIf="stepData?.providerInfo?.length; else noProviders">
+                <ul *ngFor="let provider of stepData?.providerInfo" class="provider-item">
+                  <li>
+                    <strong>{{provider.name}}</strong>
                     - {{provider.details}}
                     <br>
-                    <b>Cost Savings: </b>{{ provider.costSavings | number: '1.2-2' }}
+                    <b>Cost Savings: </b>{{ provider.total_cost | number: '1.2-2' }}
                     <br>
                     <b>Phone Number: </b>{{ provider.phone }}
                     <br>
